test/Runner/errors/tests/MI/Seed/Test.seedconf4.js
eve("Suite", () => {
	seed('Seed',"123", {
		timeout: 500
	});
});